[package]
name = "mikan-efi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootx64"
path = "src/main.rs"

[dependencies]
aarch64 = "0.0.10"
anyhow = { version = "1.0", default-features = false }
elf_rs = "0.3.0"
uefi = { version = "0.19.1", features = ["alloc"] }
uefi-services = "0.16.0"

[dependencies.mikan-core]
path = "../core"
