[package]
name = "mikan-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
aarch64 = "0.0.7"
const-str = "0.4.3"

[dependencies.mikan-core]
path = "../core"

[build-dependencies]
bdf = "0.6.0"
itertools = "0.10.5"
