[package]
name = "mikan-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
aarch64 = "0.0.7"
accessor = "0.3.3"
const-str = "0.5.3"
num-traits = { version = "0.2.15", default-features = false }
once_cell = { version = "1.17", default-features = false }
xhci = "0.9.1"

[dependencies.mikan-core]
path = "../core"

[build-dependencies]
bdf = "0.6.0"
itertools = "0.10.5"
